[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
http = "1.3.1"
postgrest = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full", "macros"] }
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
