[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
http = "1.3.1"
postgrest = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full", "macros"] }
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
async-trait = "0.1.88"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4.0"
supabase-auth = "0.10.13"
reqwest = "0.12.22"
