[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
http = "1.3.1"
postgrest = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full", "macros"] }
argon2 = "0.5.3"
password-hash = { version = "0.5.0", features = ["getrandom"] }
jsonwebtoken = "9.3.1"
chrono = {version = "0.4.41", features = ["serde"]}
async-trait = "0.1.88"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4.0"
supabase-auth = "0.10.13"
reqwest = { version = "0.12.22", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "trace",
    "timeout",
    "compression-full",
] }
uuid = { version = "1.18.1", features = ["v4"] }
dashmap = { version = "6.1.0", features = ["serde"] }
